--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <script>
         // MQTT Configuration - CHANGE THESE!
-        const MQTT_BROKER = "broker.hivemq.com";  // Free public broker for testing
+        const MQTT_BROKER = "test.mosquitto.org";  // Free public broker for testing
         const MQTT_PORT = 8000;  // WebSocket port
         const CLIENT_ID = "webClient_" + Math.random().toString(16).substr(2, 8);
         
