--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             client.connect({
                 onSuccess: onConnect,
                 onFailure: onFailure
+                useSSL: true
             });
         }
         
@@ -358,6 +359,7 @@
     </script>
 </body>
 </html>
+
 
 
 
