--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
     <script>
         // MQTT Configuration - CHANGE THESE!
-        const MQTT_BROKER = "broker.hivemq.com";  // Free public broker for testing
-        const MQTT_PORT = 8884;  // WebSocket port
+        const MQTT_BROKER = "test.mosquitto.org";  // Free public broker for testing
+        const MQTT_PORT = 8081;  // WebSocket port
         const CLIENT_ID = "webClient_" + Math.random().toString(16).substr(2, 8);
         
         // Topics
@@ -246,7 +246,6 @@
             client.connect({
                 onSuccess: onConnect,
                 onFailure: onFailure
-                useSSL: true
             });
         }
         
@@ -359,6 +358,7 @@
     </script>
 </body>
 </html>
+
 
 
 
